test/functions/promotion/issue-12736-error3.good
issue-12736-error3.chpl:3: error: unresolved access of 'int(64)' by '()'
