test/functions/promotion/issue-12736-error3.chpl

var D: domain(string);
writeln(D.size());
